# lec_phase0_project

./: .env.example  CLAUDE.md  DECISIONS.md  E156-PROTOCOL.md  README.md  TASKS.md  demo_pipeline.py  demo_pipeline_extended.py  full_pipeline_test_results.json  pilot_pcsk9i_ascvd.py  pilot_sglt2i_hf.py  push.sh  pyproject.toml  test_full_pipeline.py  test_lec_web_tool.py  test_results.json  verify_esc_compliance.py
benchmarks/: metafor_comparison.py
benchmarks/output/: metafor_benchmark_data.json  validate_with_metafor.R
configs/: discovery.yaml
data/: esc_guidelines_validation_data.json  extended_extraction.json  pcsk9i_ascvd_extraction.json  sample_extraction.json  sglt2i_hf_extraction.json
docs/: METHODS.md
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
lec-web/: lec-evidence-synthesis-v2.html  lec-evidence-synthesis.html
outputs/ctgov/: ctgov_candidates_colchicine_mi_20260109.json  ctgov_candidates_colchicine_mi_20260111.json  ctgov_candidates_colchicine_mi_20260112.json  ctgov_candidates_colchicine_mi_20260216.json
schema/: discovery_result.schema.json  extraction.schema.json  lec.schema.json  provenance.schema.json  truthcert.schema.json
sql/: colchicine_mi_candidates.sql
src/lec/: __init__.py  assembly.py  (+4 more)
tests/: test_discovery_epmc.py  test_duplicates.py  test_linking.py  test_publishing.py  test_validators.py
tickets/: TICKET_0G_AACT.md  TICKET_1X_Cochrane501_Discovery.md
validation/: manual_synthesis_pcsk9i_ascvd.md  manual_synthesis_sglt2i_hf.md  pilot_validation_report.md  web_tool_validation_report.md
(+140 files in other folders)
